# ChangeLog for gnome-base/libbonoboui
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.157 2008/03/22 23:04:12 eva Exp $

*libbonoboui-2.22.0 (22 Mar 2008)

  22 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libbonoboui-2.22.0.ebuild:
  New version for GNOME-2.22. Various small fixes and translation updates.

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> libbonoboui-2.20.0.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> libbonoboui-2.20.0.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> libbonoboui-2.20.0.ebuild:
  Marking libbonoboui-2.20.0 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> libbonoboui-2.20.0.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> libbonoboui-2.20.0.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> libbonoboui-2.20.0.ebuild:
  amd64 stable wrt #199740

*libbonoboui-2.20.0 (26 Sep 2007)

  26 Sep 2007; Daniel Gryniewicz <dang@gentoo.org>
  +libbonoboui-2.20.0.ebuild:
  New series for Gnome 2.20

  22 Sep 2007; Tom Gall <tgall@gentoo.org> libbonoboui-2.18.0.ebuild:
  stable on ppc64

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> libbonoboui-2.18.0.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Mart Raudsepp <leio@gentoo.org>
  -files/libbonoboui-2.13.0-browser-lang.patch, -libbonoboui-2.14.0.ebuild:
  Removing Gnome 2.14

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> libbonoboui-2.18.0.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org>
  libbonoboui-2.18.0.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> libbonoboui-2.18.0.ebuild:
  alpha/ia64 stable wrt #185823

  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libbonoboui-2.18.0.ebuild: