@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libbonoboui
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.157 2008/03/22 23:04:12 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.158 2008/06/08 20:54:32 eva Exp $
+
+  08 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -libbonoboui-2.18.0.ebuild:
+  clean up old revisions.
 
 *libbonoboui-2.22.0 (22 Mar 2008)
 
